fixes spacing on task header

--- a/muckrock/assets/scss/layout/_foia_detail.scss
+++ b/muckrock/assets/scss/layout/_foia_detail.scss
@@ -267,4 +267,7 @@
     .toggle {
         display: none;
     }
+    .task-type {
+        padding-left: 0;
+    }
 }
